# book_no1_rag

./: .gitignore  README.md  download_huggingface.py  pyproject.toml  requirements.txt  run_chapter_08.sh
chapter_01/: part_1.ipynb  part_2.ipynb
chapter_02/: part_01.ipynb
cllama/: cllama.py
hyeseong/: cllama.py
hyeseong/chapter_01/: part_1.ipynb  part_2.ipynb
hyeseong/chapter_02/: llm.txt
hyeseong/chapter_03/: practice.ipynb
hyeseong/chapter_03/data/: .txt  Computer_vision.txt  Object_detection.txt
rangk/chapter_01/: part_1.ipynb
rangk/chapter_02/: llm.txt
rangk/chapter_03/: part_01.ipynb
rangk/chapter_03/data/: Convolutional_neural_network.txt  Unmanned_aerial_vehicle.txt
rangk/chapter_04/: part_01.py
rangk/chapter_08/: chroma.py  llm_tools.py
yesol/chapter_01/: 01_rag_overview.ipynb  1_rag_overview.ipynb
yesol/cllama/: cllama.py
