[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "deeplake==3.9.18",
    "ipykernel>=6.29.5",
    "llama-index-embeddings-huggingface>=0.5.2",
    "llama-index-embeddings-openai>=0.3.1",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=2,<3",
    "setuptools>=78.1.0",
    "spacy>=3.8.5",
    "transformers>=4.34,<4.38",
    "wheel>=0.45.1",
]
